@@ -111,3 +111,7 @@ New Features in Shorewall 4.4
     five minutes to the same remote system then the new connection will
     use the same provider as the connection over which that last packet
     was sent.
+
+    Important note: SAME only works with providers that have the
+    'track' option specified in /etc/shorewall/providers.
+
